--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,40 +13,38 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    {% block report %}
+     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                  
+
                     {% if app.user %}
                     <li>
                         <a href="{{ path('company') }}">{% trans %}company.plural{% endtrans %}</a>
                     </li>
+                    {#<li>#}
+                        {#<a >{% trans %}reports{% endtrans %}</a>#}
+                    {#</li>#}
                     <li>
-                        <a >{% trans %}reports{% endtrans %}</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('fos_user_security_logout') }}">Logout</a> 
+                        <a href="{{ path('fos_user_security_logout') }}">{% trans %}action.logout{% endtrans %}</a>
                     </li>
                     {% endif %}
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
                 </ul>
-                
+                <div class="text-right">
+                    <p class="text-warning">Choose language:</p>
+                    <select id="language-switcher">
+                        <option value="{{ path('switch_language',{'lang' : 'pl'}) }}" {% if app.request.locale == 'pl_PL' %}selected="selected"{% endif%}>Polski</option>
+                        <option value="{{ path('switch_language',{'lang' : 'en'}) }}" {% if app.request.locale == 'en_US' %}selected="selected"{% endif %}>English</option>
+                    </select>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
-        
+    {% endblock %}
     <div class="container">
  <!-- Heading Row -->
         <div class="row">
@@ -66,12 +64,18 @@
             <script type="text/javascript" src="{{ asset('bundles/inzreports/js/jquery.js') }}"></script>
             <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
             <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
-         {% javascripts 
-            '@InzReportsBundle/Resources/public/js/*' 
-         %}
-            <script type="text/javascript" src="{{ asset_url }}"></script>
-        {% endjavascripts %}
-        
+             {% javascripts
+                '@InzReportsBundle/Resources/public/js/*'
+             %}
+                <script type="text/javascript" src="{{ asset_url }}"></script>
+            {% endjavascripts %}
+            <script type="text/javascript" >
+                $(document).ready(function(){
+                    $('#language-switcher').change(function(){
+                    window.location = $(this).val();
+                    });
+                });
+            </script>
         {% endblock %}
     </body>
 </html>
