--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,7 +19,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-
+                    {{ app.request.scheme ~'://' ~ app.request.httpHost }}
                     {% if app.user %}
                     <li>
                         <a href="{{ path('company') }}">{% trans %}company.plural{% endtrans %}</a>
