--- a/src/Inz/ReportsBundle/Resources/views/Report/pdfDocument.html.twig
+++ b/src/Inz/ReportsBundle/Resources/views/Report/pdfDocument.html.twig
@@ -1,5 +1,6 @@
 {% extends "::base.html.twig" %}
 
+        {% block javascripts %}{% endblock %}
 
 {% block report %} Wprowadzanie gazów lub pyłów do powietrza z kotłów o nominalnej mocy cieplnej
     do 5 MW opalanych węglem kamiennym, koksem, drewnem, olejem lub paliwem gazowym, dla których nie jest
