--- a/src/Inz/ReportsBundle/Resources/views/Cauldron/new.html.twig
+++ b/src/Inz/ReportsBundle/Resources/views/Cauldron/new.html.twig
@@ -1,14 +1,14 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Cauldron creation</h1>
+    <h1>{% trans %}cauldron.new{%endtrans%}</h1>
 
     {{ form(form) }}
 
         <ul class="record_actions">
-    <li>
-        <a href="{{ path('cauldron', { 'company_id' : app.request.get('company_id')}) }}">
-            Back to the list
+    <li class="btn btn-default">
+        <a href="{{ path('company_show', { 'id' : app.request.get('company_id')}) }}">
+            {% trans %}action.back_to_list{%endtrans%}
         </a>
     </li>
 </ul>
