--- a/src/Inz/ReportsBundle/Resources/views/Cauldron/show.html.twig
+++ b/src/Inz/ReportsBundle/Resources/views/Cauldron/show.html.twig
@@ -3,34 +3,34 @@
 {% block body -%}
     <h1>Cauldron</h1>
 
-    <table class="record_properties">
+    <table class="record_properties table">
         <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ entity.id }}</td>
             </tr>
             <tr>
-                <th>Type</th>
+                <th>{% trans %}cauldron.type{%endtrans%}</th>
                 <td>{{ entity.name }}</td>
             </tr>
             <tr>
-                <th>Unitcost</th>
+                <th>{% trans %}cauldron.unitCost{%endtrans%}</th>
                 <td>{{ entity.cauldronType }}</td>
             </tr>
         </tbody>
     </table>
 
         <ul class="record_actions">
-    <li>
-        <a href="{{ path('cauldron',{ 'company_id': app.request.get('company_id')}) }}">
-            Back to the list
+    <li class="btn btn-default">
+        <a href="{{ path('company_show',{ 'id': app.request.get('company_id')}) }}">
+            {% trans %}action.back_to_list{%endtrans%}
         </a>
     </li>
-    <li>
+    <li class="btn btn-default">
         <a href="{{ path('cauldron_edit', { 'id': entity.id, 'company_id': app.request.get('company_id') }) }}">
-            Edit
+            {% trans %}action.edit{%endtrans%}
         </a>
     </li>
-    <li>{{ form(delete_form) }}</li>
+    {{ form(delete_form) }}
 </ul>
 {% endblock %}
