--- a/src/Inz/ReportsBundle/Resources/views/Company/new.html.twig
+++ b/src/Inz/ReportsBundle/Resources/views/Company/new.html.twig
@@ -6,7 +6,7 @@
     {{ form(form) }}
 
         <ul class="record_actions">
-    <li>
+    <li class="btn btn-default">
         <a href="{{ path('company') }}">
             {% trans %}action.back_to_list{%endtrans%}
         </a>
