--- a/src/Inz/ReportsBundle/Resources/views/Car/new.html.twig
+++ b/src/Inz/ReportsBundle/Resources/views/Car/new.html.twig
@@ -23,9 +23,9 @@
     {{ form(form) }}
 
         <ul class="record_actions">
-    <li>
-        <a href="{{ path('car', { 'company_id' : app.request.get('company_id')}) }}">
-            Back to the list
+    <li class="btn btn-default">
+        <a href="{{ path('company_show', { 'id' : app.request.get('company_id')}) }}">
+            {% trans %}action.back_to_list{%endtrans%}
         </a>
     </li>
 </ul>
