--- a/src/Inz/ReportsBundle/Resources/views/Report/pdfDocument.html.twig
+++ b/src/Inz/ReportsBundle/Resources/views/Report/pdfDocument.html.twig
@@ -21,7 +21,7 @@
             <tr>
                 <td>{{ data.type }}</td>
                 <td>{{ data.cauldronsAmount }}</td>
-                <td>{{ data.massSum }}</td>
+                <td>{{ data.massSum|number_format(4) }}</td>
                 <td>{{ data.unitCost }}</td>
                 <td >{{  data.totalCost|number_format(2, '.', ',') }}</td>
             </tr>
@@ -45,7 +45,7 @@
             <td rowspan="{{ array|length }}">{{  key }}</td>
             {% for data in array %}
                 <td >{{  data.fuelType }}</td>
-                <td >{{  data.massSum/1000 }}</td>
+                <td >{{  data.massSum|number_format(4) }}</td>
                 <td >{{  data.unitCost }}</td>
                 <td >{{  data.totalCost|number_format(2, '.', ',') }}</td>
             </tr>
